# pp2ot-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  Default.csv  Dioxus.toml  README.md  RELEASE_NOTES.md  frontend-skill.md  old-README.md  settings.json
.agent/rules/: check.md
.agent/workflows/: release-app.md
assets/: icon.icns  main.css  tailwind.css
ontime-doca/: respond-ontime.json
src/: format_helper.rs  main.rs  time_picker.rs  utils.rs
src/components/: formatter.rs  mod.rs  navbar.rs  settings.rs  time_picker.rs
src/types/: formatter.rs  mod.rs  ontime.rs  propresenter.rs  settings.rs
